--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	font-family:"Trebuchet MS","sans-serif";
 }
 </style>
-<script src="libs/jquery-3.5.1.min.js"></script>
+<script src="libs/jquery.min-3.5.1.js"></script>
 <script src="libs/d3.min.js"></script>
+<script src="libs/topojson-client.js"></script>
 <script src="vmt_viz.js"></script>
 </head>
 <body>
