First functioning (simple) prototype.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 }
 </style>
 <script src="libs/jquery.min-3.5.1.js"></script>
+<script src="libs/lodash.js"></script>
 <script src="libs/d3.min.js"></script>
-<script src="libs/topojson-client.js"></script>
 <script src="vmt_viz.js"></script>
 </head>
 <body>
