--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <head lang="en">
 <meta charset="utf-8">
 <title>Visualization of VMT by County</title>
-<style>
-* {
-	font-family:"Trebuchet MS","sans-serif";
-}
-</style>
+<link rel="stylesheet" href="vmt_viz.css"/>
 <script src="libs/jquery.min-3.5.1.js"></script>
 <script src="libs/lodash.js"></script>
 <script src="libs/d3.min.js"></script>
@@ -14,6 +10,10 @@
 </head>
 <body>
 	<h1>Visualization of VMT by County</h1>
+	<span>
+		<span id="app_caption_generic" class="app_caption">VMT Data for&nbsp;</span>
+		<span id="app_caption_date" class="app_caption">2020-03-01</span>
+	</span>
 	<script>
 		$(document).ready(function() {
 			vmt_visualization();	
