Tweaks to app title and sub-title.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head lang="en">
 <meta charset="utf-8">
-<title>Visualization of VMT by County</title>
+<title>Visualization of Vehicle-miles Traveled (VMT) by County</title>
 <link rel="stylesheet" href="vmt_viz.css"/>
 <script src="libs/jquery.min-3.5.1.js"></script>
 <script src="libs/lodash.js"></script>
@@ -9,9 +9,9 @@
 <script src="vmt_viz.js"></script>
 </head>
 <body>
-	<h1 id="app_caption">Visualization of VMT by County</h1>
+	<h1 id="app_caption">Visualization of Vehicle-miles Traveled (VMT) by County</h1>
 	<div id="date_region">
-		<span>Data for&nbsp;</span>
+		<span>VMT Data for&nbsp;</span>
 		<span id="date_field">March 1, 2020</span>
 	</div>
 	<script>
