Added scale using d3-scale library.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script src="libs/jquery.min-3.5.1.js"></script>
 <script src="libs/lodash.js"></script>
 <script src="libs/d3.min.js"></script>
+<script src="libs/d3-legend-2.25.6.js"></script>
 <script src="vmt_viz.js"></script>
 </head>
 <body>
@@ -19,9 +20,8 @@
 			vmt_visualization();	
 		});	
 	</script>
+	<div id="legend_div"></div>
 	<div id="map"></div>
-	<div id="legend"></div>
-	<br/>
 	<!--
 	<div id="button_div">
 		<input id="about_button" type="button" value="About this demo" alt="Information about  this demo"></input>
