Modified to support presentation of both 'absolute' and 'delta' data.

--- a/vmt.html
+++ b/vmt.html
@@ -17,15 +17,10 @@
 	</div>
 	<script>
 		$(document).ready(function() {
-			vmt_visualization();	
+			vmt_visualization('absolute');	
 		});	
 	</script>
 	<div id="legend_div"></div>
 	<div id="map"></div>
-	<!--
-	<div id="button_div">
-		<input id="about_button" type="button" value="About this demo" alt="Information about  this demo"></input>
-	</div>
-	-->
 </body>
 </html>
