--- a/vmt.html
+++ b/vmt.html
@@ -10,6 +10,15 @@
 <script src="vmt_viz.js"></script>
 </head>
 <body>
+	<div class="ctpsHeader">
+		<div class="lightBlue"></div>
+		<div class="darkBlue"></div>
+		<div id="banner">
+			<a href="https://www.ctps.org/" target="_blank" title="Boston MPO">
+				<img style="height:59px" src="img/ctps_header.png" title="Opens Boston MPO website in a new window">
+			</a>
+		</div>
+	</div>
 	<h1 id="app_caption">Visualization of Vehicle-miles Traveled (VMT) by County</h1>
 	<div id="date_region">
 		<span>VMT Data for&nbsp;</span>
