--- a/vmt_change.html
+++ b/vmt_change.html
@@ -22,8 +22,8 @@
 	<h1 id="app_caption">Change in Vehicle-miles Traveled (VMT) from January, 2020 Average by County</h1>
 	<div id="date_region">
 		<span>Change in VMT between&nbsp;</span>
-		<span id="date_field">March 1, 2020</span>
-		<span>&nbsp;and January, 2020</span>
+		<span id="date_field">February 1, 2020</span>
+		<span>&nbsp;and January, 2020 Average</span>
 	</div>
 	<script>
 		$(document).ready(function() {
