--- a/vmt.html
+++ b/vmt.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<head lang="en">
-<meta charset="utf-8">
-<title>Visualization of Vehicle-miles Traveled (VMT) by County</title>
-<link rel="stylesheet" href="vmt_viz.css"/>
-<script src="libs/jquery.min-3.5.1.js"></script>
-<script src="libs/lodash.js"></script>
-<script src="libs/d3.min.js"></script>
-<script src="libs/d3-legend-2.25.6.js"></script>
-<script src="vmt_viz.js"></script>
-</head>
+	<head lang="en">
+		<meta charset="utf-8">
+		<title>Visualization of Vehicle-miles Traveled (VMT) by County</title>
+		<link rel="stylesheet" href="vmt_viz.css"/>
+		<script src="libs/jquery.min-3.5.1.js"></script>
+		<script src="libs/lodash.js"></script>
+		<script src="libs/d3.min.js"></script>
+		<script src="libs/d3-legend-2.25.6.js"></script>
+		<script src="vmtCommon.js"></script>
+		<script src="vmt_viz.js"></script>
+	</head>
 <body>
 	<div class="ctpsHeader">
 		<div class="lightBlue"></div>
