--- a/vmt_static.html
+++ b/vmt_static.html
@@ -9,6 +9,7 @@
 		<script src="libs/lodash.js"></script>
 		<script src="libs/d3.min.js"></script>
 		<script src="libs/d3-legend-2.25.6.js"></script>
+		<script src="vmtCommon.js"></script>
 		<script src="vmt_static_viz.js"></script>
 	</head>
 	<body>
